Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-44856

Missing QFbCursor::setPos() implementation

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.5.0
    • 5.4.1
    • QPA: LinuxFB
    • None
    • 3bf655e5960c8f0ac4cb8b99a671886b824c7191, dc6d353a299d3eeaf57055486db12548198114a7

      A customer is reporting the following warning with his Qt installation:

      This plugin does not support QCursor::setPos(); emulating movement within the application.
      

      And indeed, the LinuxFB integration lacks an implementation of the virtual QPlatformCursor::setPos() function.

      Looking at the existing qfb*.cpp code it seems like all everything needed might already be there. That means a reimplementation of setPos() with 1-2 lines triggering the needed changes might be sufficient. I apologize for not having the setup to fix that myself.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            lagocs Laszlo Agocs
            porten Harri Porten (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes